@@ -416,7 +416,7 @@ class Config(object):
             {
                 "name": "Matte Paint",
                 "code": "Matte",
-                "path": "{{project.code}}/Sequences/{{sequence.code}}/Shots/{{version.base_name}}/PAINTINGS/{{type.code}}",
+                "path": "{{project.code}}/Sequences/{{sequence.code}}/Shots/{{version.base_name}}/{{type.code}}",
                 "filename": "{{version.base_name}}_{{version.take_name}}_{{type.code}}_v{{'%03d'|format(version.version_number)}}_{{version.created_by.initials}}{{version.extension}}",
                 "output_path": "{{version._path}}/Output/{{version.take_name}}",
                 "extra_folders": "",
@@ -426,17 +426,17 @@ class Config(object):
             {
                 "name": "Texture Paint",
                 "code": "Texture",
-                "path": "{{project.code}}/Assets/{{version.base_name}}/PAINTINGS/{{type.code}}",
+                "path": "{{project.code}}/Assets/{{version.base_name}}/{{type.code}}",
                 "filename": "{{version.base_name}}_{{version.take_name}}_{{type.code}}_v{{'%03d'|format(version.version_number)}}_{{version.created_by.initials}}{{version.extension}}",
                 "output_path": "{{version._path}}/Output/{{version.take_name}}",
                 "extra_folders": "",
-                "environments": ["Photoshop"],
+                "environments": ["Photoshop", "Nuke"],
                 "type_for": "Asset",
             },
             {
                 "name": "Illustration",
                 "code": "Illust",
-                "path": "{{project.code}}/Assets/{{version.base_name}}/PAINTINGS/{{type.code}}",
+                "path": "{{project.code}}/Assets/{{version.base_name}}/{{type.code}}",
                 "filename": "{{version.base_name}}_{{version.take_name}}_{{type.code}}_v{{'%03d'|format(version.version_number)}}_{{version.created_by.initials}}{{version.extension}}",
                 "output_path": "{{version._path}}/Output/{{version.take_name}}",
                 "extra_folders": "",
